openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fraud-gateway-server
  labels:
    app: fraud-gateway-server
    app.kubernetes.io/name: fraud-gateway-server
spec:
  selector:
    app: fraud-gateway-server
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
  type: ClusterIP
